Fix alignment of table streaming button

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,6 +57,9 @@ select {
   padding: 0.5em 2em .5em .5em;
   width: max-content;
 }
+#TableStartStreaming{
+  display: flex;
+}
 
 .streamingTable{
   height: 500;
